package inc.faregh.model;

public class Body extends Piece{
    /**
     * make body with a known position
     *
     * @param p location of object
     * @see Piece#p
     */
    public Body(Point p) {
        super(p);
    }
}
