package inc.faregh.model;

public enum Direction {
    /**
     * Right direction indexed in 0
     */
    R,
    /**
     * Left direction indexed in 1
     */
    L,
    /**
     * Down direction indexed in 2
     */
    D,
    /**
     * Up direction indexed in 3
     */
    U
}
