package inc.faregh.model;

public class Fruit extends Piece{
    /**
     * make fruit with a known position
     *
     * @param p location of object
     * @see Piece#p
     */
    public Fruit(Point p) {
        super(p);
    }
}
