package inc.faregh.model.modes;

import inc.faregh.model.Direction;

public class UsualMode extends Strategy {

    @Override
    void Execute(Direction d) {
        //TODO
    }

}
